--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -23,5 +23,6 @@ $iv-panel-bg-color: #eee;
 $iv-panel-bg-image: linear-gradient( top, rgba(#000, 0), rgba(#000, 0.15) );
 $iv-panel-border: solid 1px rgba(#fff, 0.5);
 $iv-panel-color: #222;
+$iv-panel-width: 250px;
 
 $iv-panel-borders: none, solid 1px rgba(#000, 0.5), none, solid 1px rgba(#fff, 0.5);
